# DataFlow

./: .gitignore  LICENSE  README.md  README.zh-CN.md  enviroment.sh  frontend.md  plan.md
.claude/: settings.local.json
DataFlow-main/: build.gradle  settings.gradle
DataFlow-main/backend/: build.gradle
DataFlow-main/frontend/: package-lock.json
DataFlow-main/services/: pyproject.toml
backend/: build.gradle  compose.yaml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/__tests__/: App.spec.ts
frontend/src/api/: auth.ts  file.ts  http.ts  notification.ts  pipeline.ts  task.ts
frontend/src/assets/: main.css
frontend/src/i18n/: en.ts  index.ts  zh-CN.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  file.ts  nodeSchema.ts  notification.ts  pipeline.ts  task.ts
frontend/src/views/: Dashboard.vue  FileManager.vue  FlowEditor.vue  Login.vue  PipelineList.vue  Register.vue  Settings.vue  TaskDetail.vue  TaskMonitor.vue
services/: main_v3.py  pyproject.toml  requirements.txt
services/config/: create_images_metadata_table.py
services/core/: crud.py  data_sources.py  database.py  minio_client.py  models.py  schemas.py  service.py
services/scripts/: export_one_day_image.bat  fastapi_start.bat  import_gee.bat  start_server.bat
services/test/: test_connection.py  test_minio_connection.py
services/注意事项/: readme.md
worker/: .gitignore  cli.py  dispatcher.py  executor.py  reporter.py  requirements.txt  schema_export.py
worker/nodes/: __init__.py  base.py
(+140 files in other folders)
